--- a/index.html
+++ b/index.html
@@ -115,110 +115,109 @@
                         `
                     },
                     {
-        title: "Seção 5: Plataformas e Ferramentas",
-        content: `
+    title: "Seção 5: Plataformas e Ferramentas",
+    content: `
+        <div>
+            <p class="text-sm font-medium">Selecione todas as opções que sua empresa utiliza:</p>
             <div>
-                <p class="text-sm font-medium">Selecione todas as opções que sua empresa utiliza:</p>
-                <div>
-                    <input type="checkbox" id="facebook-ads" name="plataformas" value="Facebook Ads" class="mr-2">
-                    <label for="facebook-ads">Facebook Ads (Colocar de ADM)</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="pagina-facebook" name="plataformas" value="Página do Facebook" class="mr-2">
-                    <label for="pagina-facebook">Página do Facebook (Colocar de ADM)</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="google-ads" name="plataformas" value="Google Ads" class="mr-2">
-                    <label for="google-ads">Google Ads (Colocar de ADM)</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="tag-manager" name="plataformas" value="Google Tag Manager" class="mr-2">
-                    <label for="tag-manager">Google Tag Manager (Colocar de ADM)</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="google-analytics" name="plataformas" value="Google Analytics" class="mr-2">
-                    <label for="google-analytics">Google Analytics (Colocar de ADM)</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="crm" name="plataformas" value="Acessos ao CRM" class="mr-2">
-                    <label for="crm">Acessos ao CRM</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="bling" name="plataformas" value="Bling" class="mr-2">
-                    <label for="bling">Bling!</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="hospedagem" name="plataformas" value="Acessos Hospedagem" class="mr-2">
-                    <label for="hospedagem">Acessos Hospedagem (Passar acesso ou Colocar de ADM)</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="dominio" name="plataformas" value="Acesso ao domínio" class="mr-2">
-                    <label for="dominio">Acesso ao domínio (Colocar de ADM)</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="wordpress" name="plataformas" value="WordPress" class="mr-2">
-                    <label for="wordpress">WordPress (Criar usuário de ADM)</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="email-marketing" name="plataformas" value="Ferramenta de E-mail Marketing" class="mr-2">
-                    <label for="email-marketing">Ferramenta de E-mail Marketing (ADM)</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="ajuda" name="plataformas" value="Não sei adicionar usuários" class="mr-2">
-                    <label for="ajuda">Não sei adicionar usuários, preciso de ajuda.</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="instagram" name="plataformas" value="Acessos Instagram" class="mr-2">
-                    <label for="instagram">Passar acessos do Instagram e demais redes sociais.</label>
-                </div>
-                <div>
-                    <input type="checkbox" id="outros" name="plataformas" value="Outros" class="mr-2">
-                    <label for="outros">Outros</label>
-                    <textarea id="outros-descricao" name="outros-descricao" class="w-full p-2 border rounded-md mt-2 hidden"></textarea>
-                </div>
+                <input type="checkbox" id="facebook-ads" name="plataformas" value="Facebook Ads" class="mr-2">
+                <label for="facebook-ads">Facebook Ads (Colocar de ADM)</label>
             </div>
-            <div class="mt-4">
-                <label class="block text-sm font-medium">Você precisa de ajuda para adicionar nossos usuários às plataformas?</label>
-                <div>
-                    <input type="radio" id="ajuda-sim" name="ajuda" value="Sim" class="mr-2">
-                    <label for="ajuda-sim">Sim</label>
-                </div>
-                <div>
-                    <input type="radio" id="ajuda-nao" name="ajuda" value="Não" class="mr-2">
-                    <label for="ajuda-nao">Não</label>
-                </div>
+            <div>
+                <input type="checkbox" id="pagina-facebook" name="plataformas" value="Página do Facebook" class="mr-2">
+                <label for="pagina-facebook">Página do Facebook (Colocar de ADM)</label>
             </div>
-            <div id="agenda-instrucoes" class="hidden mt-4">
-                <p class="text-sm font-medium">Instruções para adicionar nossos usuários:</p>
-                <ul class="list-disc ml-4">
-                    <li>Meta (Facebook e Instagram Ads): Adicione o e-mail <strong>sylvio@v4company.com</strong>.</li>
-                    <li>Demais plataformas: Adicione o e-mail <strong>contato.franca@v4company.com</strong>.</li>
-                </ul>
+            <div>
+                <input type="checkbox" id="google-ads" name="plataformas" value="Google Ads" class="mr-2">
+                <label for="google-ads">Google Ads (Colocar de ADM)</label>
             </div>
-            <div id="agenda-embed" class="hidden mt-4">
-                <iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1H6JuOL_Jh8rDVhX7G8KthPQ34tVVErnUo-yJAj12G3AmwJdog1kwFKBI_WYahPOjnu5F1ipye?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
+            <div>
+                <input type="checkbox" id="tag-manager" name="plataformas" value="Google Tag Manager" class="mr-2">
+                <label for="tag-manager">Google Tag Manager (Colocar de ADM)</label>
             </div>
-        `
-    }
-];
-// Lógica para exibir orientações ou agenda
-const ajudaSim = document.getElementById('ajuda-sim');
-const ajudaNao = document.getElementById('ajuda-nao');
-const agendaInstrucoes = document.getElementById('agenda-instrucoes');
-const agendaEmbed = document.getElementById('agenda-embed');
+            <div>
+                <input type="checkbox" id="google-analytics" name="plataformas" value="Google Analytics" class="mr-2">
+                <label for="google-analytics">Google Analytics (Colocar de ADM)</label>
+            </div>
+            <div>
+                <input type="checkbox" id="crm" name="plataformas" value="Acessos ao CRM" class="mr-2">
+                <label for="crm">Acessos ao CRM</label>
+            </div>
+            <div>
+                <input type="checkbox" id="bling" name="plataformas" value="Bling" class="mr-2">
+                <label for="bling">Bling!</label>
+            </div>
+            <div>
+                <input type="checkbox" id="hospedagem" name="plataformas" value="Acessos Hospedagem" class="mr-2">
+                <label for="hospedagem">Acessos Hospedagem (Passar acesso ou Colocar de ADM)</label>
+            </div>
+            <div>
+                <input type="checkbox" id="dominio" name="plataformas" value="Acesso ao domínio" class="mr-2">
+                <label for="dominio">Acesso ao domínio (Colocar de ADM)</label>
+            </div>
+            <div>
+                <input type="checkbox" id="wordpress" name="plataformas" value="WordPress" class="mr-2">
+                <label for="wordpress">WordPress (Criar usuário de ADM)</label>
+            </div>
+            <div>
+                <input type="checkbox" id="email-marketing" name="plataformas" value="Ferramenta de E-mail Marketing" class="mr-2">
+                <label for="email-marketing">Ferramenta de E-mail Marketing (ADM)</label>
+            </div>
+            <div>
+                <input type="checkbox" id="ajuda" name="plataformas" value="Não sei adicionar usuários" class="mr-2">
+                <label for="ajuda">Não sei adicionar usuários, preciso de ajuda.</label>
+            </div>
+            <div>
+                <input type="checkbox" id="instagram" name="plataformas" value="Acessos Instagram" class="mr-2">
+                <label for="instagram">Passar acessos do Instagram e demais redes sociais.</label>
+            </div>
+            <div>
+                <input type="checkbox" id="outros" name="plataformas" value="Outros" class="mr-2">
+                <label for="outros">Outros</label>
+                <textarea id="outros-descricao" name="outros-descricao" class="w-full p-2 border rounded-md mt-2 hidden"></textarea>
+            </div>
+        </div>
+        <div class="mt-4">
+            <label class="block text-sm font-medium">Você precisa de ajuda para adicionar nossos usuários às plataformas?</label>
+            <div>
+                <input type="radio" id="ajuda-sim" name="ajuda" value="Sim" class="mr-2">
+                <label for="ajuda-sim">Sim</label>
+            </div>
+            <div>
+                <input type="radio" id="ajuda-nao" name="ajuda" value="Não" class="mr-2">
+                <label for="ajuda-nao">Não</label>
+            </div>
+        </div>
+        <div id="agenda-instrucoes" class="hidden mt-4">
+            <p class="text-sm font-medium">Instruções para adicionar nossos usuários:</p>
+            <ul class="list-disc ml-4">
+                <li>Meta (Facebook e Instagram Ads): Adicione o e-mail <strong>sylvio@v4company.com</strong>.</li>
+                <li>Demais plataformas: Adicione o e-mail <strong>contato.franca@v4company.com</strong>.</li>
+            </ul>
+        </div>
+        <div id="agenda-embed" class="hidden mt-4">
+            <iframe src="https://calendar.google.com/calendar/appointments/schedules/AcZssZ1H6JuOL_Jh8rDVhX7G8KthPQ34tVVErnUo-yJAj12G3AmwJdog1kwFKBI_WYahPOjnu5F1ipye?gv=true" style="border: 0" width="100%" height="600" frameborder="0"></iframe>
+        </div>
+    `,
+    logic: `
+        const ajudaSim = document.getElementById('ajuda-sim');
+        const ajudaNao = document.getElementById('ajuda-nao');
+        const agendaInstrucoes = document.getElementById('agenda-instrucoes');
+        const agendaEmbed = document.getElementById('agenda-embed');
 
-if (ajudaSim && ajudaNao && agendaInstrucoes && agendaEmbed) {
-    ajudaSim.addEventListener('change', () => {
-        agendaInstrucoes.classList.add('hidden');
-        agendaEmbed.classList.remove('hidden');
-    });
+        if (ajudaSim && ajudaNao && agendaInstrucoes && agendaEmbed) {
+            ajudaSim.addEventListener('change', () => {
+                agendaInstrucoes.classList.add('hidden');
+                agendaEmbed.classList.remove('hidden');
+            });
 
-    ajudaNao.addEventListener('change', () => {
-        agendaInstrucoes.classList.remove('hidden');
-        agendaEmbed.classList.add('hidden');
-    });
+            ajudaNao.addEventListener('change', () => {
+                agendaInstrucoes.classList.remove('hidden');
+                agendaEmbed.classList.add('hidden');
+            });
+        }
+    `
 }
-
                 let currentSection = 0;
                 function renderSection() {
                     const section = formSections[currentSection];
